# django-tasks-db-api

./: .gitignore  LICENSE  README.md  pyproject.toml
django_tasks_db_api/: apps.py  backend.py  conf.py  filters.py  lease.py  models.py  serializers.py  tasks.py  urls.py  views.py  worker.py
django_tasks_db_api/management/commands/: clear_expired_leases.py  db_api_worker.py
django_tasks_db_api/migrations/: 0001_initial.py
django_tasks_db_api/tests/: settings.py  test_api.py  test_auto_reset_task.py  test_clear_expired_leases.py  test_integration.py  test_lease.py  test_races.py  test_tasks.py  test_worker.py
examples/test_project/: pyproject.toml
examples/test_project/test_project/: settings.py  urls.py
examples/with_auth/: README.md  manage.py
examples/with_auth/with_auth/: settings.py  tasks.py  urls.py
